--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <section>
     <h4 class="secTitle">JOB TITLE</h4><hr>
       <p>
-        Experienced in Ruby on Rails and JavaScript based programming, specifically React.js. With a background in Creative Retail Merchandising and Marketing Management, a drive for creativity and innovation transcends directly into any programmatic approach. Possess strong skills in communication, time management and organization, teamwork collaboration, and problem solving with a creative approach. This set of tools helps any company or project thrive in driving positive results, both in a self sufficient and teamwork environment.
+        Creative and innovative software developer experienced in JavaScript based programming, specifically React.js and Ruby on Rails. With a background in Creative Retail Merchandising and Marketing Management, a drive for out of the box thinking that transcends directly into any programmatic approach. Possess strong skills in communication, leadership, organization, teamwork collaboration, and problem solving with a creative approach. This set of tools helps any company or project thrive in achieving positive results, both in a self sufficient and teamwork environment.
       </p> 
   </section>     
   <section>
     <h4 class="secTitle">TECHNICAL SKILLS</h4><hr>
       <p>
-        Ruby, Rails, SQL (PostgreSQL), JavaScript, React, custom CSS, CSS animation, BootStrap
+        JavaScript, React, Ruby, Rails, SQL (PostgreSQL), custom CSS, CSS animation, BootStrap
       </p> 
   </section>  
 
@@ -45,23 +45,24 @@
         </p>
         <p><u>Github</u>: Front-End - <a href="https://github.com/Nflores161/VOAP-FE">https://github.com/Nflores161/VOAP-FE</a> | Back-End - <a href="https://github.com/Nflores161/VOAP-BE">https://github.com/Nflores161/VOAP-BE</a>
         </p>
-        <p>VOAP is a platform for artists to post art for musicians and promoters to browse. Users are able to create a profile and either post art or browse artists' work. Users are able to see art on different mediums such as CD, Vinyl, and on a Flyer.
+        <p>VOAP is a platform for artists to post art for musicians and promoters to browse. Users are able to create a profile and either post art or browse artists' work. Users are able to see art on different mediums such as CD, Vinyl, and on a Flier.
         </p>  
 
         <ul>
           <li>
-            JSON Web Tokens and localStorage to store encrypted user information client-side.
+            Utilized JSON Web Tokens and localStorage to store encrypted user information client-side.
           </li> 
           <li>
-          Worked with Rails ActiveStorage and localStorage to upload and save art image metadata to the backend.
-          Used PostgreSQL with Ruby on Rails to create a database for user information, art images, and a favoriting system.
+            Worked with Rails ActiveStorage and localStorage to upload and save art image metadata to the backend.
           </li>
           <li>
-          Created a favoriting system to like users and refer back to them on personal profile page.
-          Designed custom CSS to render art images from a users profile page onto a CD, vinyl LP cover, or show flyer to directly visualize the art on the mentioned mediums.
+            Created a favoriting system to like users and refer back to them on personal profile page.
           </li>
           <li>
-          Made an algorithm using Ruby and PostgreSQL to render a random featured user from the database on the main page upon each time visiting.
+            Designed custom CSS to render art images from a users profile page onto a CD, vinyl LP cover, or show flier to directly visualize the art on the mentioned mediums.
+          </li>
+          <li>
+            Made an algorithm using Ruby and PostgreSQL to render a random featured user from the database on the main page upon each time visiting.
           </li>
         </ul>
       </div>
